# floralpina-demo-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  utils.py
data/model/: last_layer.pt
